syntax = "proto3";

package billing;

option go_package = "my-voice-billing/internal/transport/grpc/pb";

service TokenService {
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
  rpc CreateToken(CreateTokenRequest) returns (CreateTokenResponse);
}

service TaskService {
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
}

message GetTokenRequest {
  int64 id = 1;
}

message GetTokenResponse {
  int64 id = 1;
  int64 user_id = 2;
  string token = 3;
}

message CreateTokenRequest {
  int64 user_id = 1;
  string token = 2;
}

message CreateTokenResponse {
  int64 id = 1;
}

message GetTaskRequest {
  int64 id = 1;
}

message GetTaskResponse {
  int64 id = 1;
  int64 token_id = 2;
  string task = 3;
}

message CreateTaskRequest {
  int64 token_id = 1;
  string task = 2;
}

message CreateTaskResponse {
  int64 id = 1;
}
